--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint": "eslint js/",
     "build": "gulp build",
     "start": "gulp serve",
-    "test": " npm run eslint && gulp test"
+    "test": " npm run eslint && gulp test",
+    "only-tests": "gulp test"
   },
   "devDependencies": {
     "autoprefixer": "8.5.1",
@@ -27,6 +28,7 @@
     "gulp-rename": "1.2.3",
     "gulp-sass": "4.0.1",
     "gulp-sourcemaps": "2.6.4",
+    "mocha": "^5.2.0",
     "rollup-plugin-commonjs": "9.1.3"
   },
   "engines": {
